update Instructions